# personality-tts

./: .env.example  .gitignore  AEC_CHANGES.md  AEC_OPTIMIZATION_SUMMARY.md  AEC_QUICKSTART.md  AEC_SETUP_GUIDE.md  AGENT_DESIGN.md  ARCHITECTURE_ANALYSIS.md  AUDIO_FIX.md  CHANGELOG.md  CLAUDE_CODE_GUIDE.md  CLAUDE_TOKEN_MANAGEMENT.md  CONFIG_GUIDE.md  HARDWARE_AEC_QUICKSTART.md  HOW_TO_USE_VOLCENGINE.md  HTTP_VS_WEBSOCKET.md  PROMPT_GUIDE.md  PROMPT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  REALTIME_COMPLETE.md  STREAMING_COMPLETE.md  STREAMING_EXPLAINED.md  STREAMING_GUIDE.md  TEXT_CLEANER.md  TTS_ANALYSIS.md  VOICE_ASSISTANT.md  VOICE_ASSISTANT_PROMPT.md  VOLCENGINE_REALTIME_SUMMARY.md  add_test_memory.py  check_all_users.py  check_memories.py  dd.json  list_audio_devices.py  output.pcm  requirements.txt  run.py  simple_aec_no_ref.py  test_aec_function.py  (+17 more)
del_agent/: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  README.md  USAGE.md  __init__.py  backend_main.py  env.example  main.py  pyproject.toml  run.sh
del_agent/.github/: copilot-instructions.md
del_agent/agents/: __init__.py  compressor.py  critic.py  info_extractor.py  persona.py  raw_comment_cleaner.py  slang_decoder.py  strictness_prompt_generator.py  weigher.py
del_agent/backend/: __init__.py  factory.py
del_agent/config/: del1.md  prompt.md  req1.md  settings.yaml
del_agent/core/: base_agent.py  dictionary_store.py  llm_adapter.py  verification.py
del_agent/docs/: PERFORMANCE_TIMING.md  usage_backend.md
del_agent/examples/: README.md  demo.py  demo_verification.py  (+3 more)
(+207 files in other folders)
